--- a/project/style.css
+++ b/project/style.css
@@ -94,6 +94,10 @@ input {
   color: red;
 }
 
+.succ p {
+  color: green;
+}
+
 .items-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -143,5 +147,56 @@ input {
 
 .input-hidden {
   display: none;
+}
+
+.add-item-form-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.add-item-form {
+  width: 50vw;
+  height: 80vh;
+  border-radius: 10px;
+  background-color: white;
+  position: fixed;
+  top: 10vh;
+  left: 25vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.add-item-button {
+  padding: 15px 30px;
+  font-size: 1rem;
+  background: none;
+  border: 2px solid #333;
+  border-radius: 7px;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+}
+
+.add-item-button:hover {
+  background: #333;
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
