--- a/project/views/home.html
+++ b/project/views/home.html
@@ -1,5 +1,3 @@
-<?php session_start(); ?>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,23 +9,20 @@
 </head>
 <body>
     <main class="index-main">
-        <?php
-            if(isset($_SESSION["loggedin"]) && $_SESSION["loggedin"] === true) {
-                echo("<h1>Hi ".$_SESSION["name"]."!</h1>");
-            }
-        ?>
+        {% if logged_in %}
+            <h1>Hello {{ name }}!</h1>
+        {% endif %}
+
         <div class="link-wrapper">
             <a href="/project/register">Register</a>
             <a href="/project/login">Login</a>
             <a href="/project/logout">Logout</a>
-            <a href="/project/items">Search Items</a>
-            <a href="/project/borrowings">My Borrowings</a>
+            <a href="/project/items">Items</a>
+            <a href="/project/borrowings">Borrowings</a>
 
-            <?php
-                if(isset($_SESSION["roles"]) && in_array("admin", $_SESSION["roles"]) === true) {
-                    echo ("<a href='/project/admin'>Admin Panel<a>");
-                }
-            ?>
+            {% if admin %}
+                <a href='/project/admin'>Admin Panel<a>
+            {% endif %}
         </div>
     </main>
 
