Added Contact page with send emails feature and stats page

--- a/project/style.scss
+++ b/project/style.scss
@@ -4,7 +4,7 @@ body {
     font-family: sans-serif;
 }
 
-.login-main, .register-main, .search-main, .borrowings-main, .index-main {
+.login-main, .register-main, .search-main, .borrowings-main, .index-main, .contact-main, .stats-main {
     width: 100vw;
     display: flex;
     flex-direction: column;
