--- a/project/views/home.html
+++ b/project/views/home.html
@@ -19,9 +19,10 @@
             <a href="/project/logout">Logout</a>
             <a href="/project/items">Items</a>
             <a href="/project/borrowings">Borrowings</a>
+            <a href="/project/contact">Contact Us</a>
 
             {% if admin %}
-                <a href='/project/admin'>Admin Panel<a>
+                <a href='/project/stats'>Stats<a>
             {% endif %}
         </div>
     </main>
