--- a/project/views/stats.html
+++ b/project/views/stats.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <title>Admin Panel</title>
+    <title>Stats</title>
 </head>
 <body>
-    <main class="admin-main">
-        <h1 class="admin-heading">Admin Panel</h1>
-
+    <main class="stats-main">
+        <h1 class="stats-heading">Website Stats</h1>
+        <p>Total Home Views: {{ totalHomeViews }}</p>
+        <p>Total Unique Visitors: {{ totalVisitors }}</p>
         </div>
     </main>
 </body>
