--- a/project/style.scss
+++ b/project/style.scss
@@ -82,6 +82,7 @@ input {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 30px;
 }
 .item {
