--- a/project/views/register.html
+++ b/project/views/register.html
@@ -27,7 +27,7 @@
             <input type="text" placeholder="Name" name="name" required />
             <input type="password" placeholder="Password" name="password" required />
             <br />
-            <div class="g-recaptcha" data-sitekey="6LcvrNYjAAAAAKqcfRLqVq1_Zkf-SVG9fSj7ji8g"></div>
+            <div class="g-recaptcha" data-sitekey="{{ siteKey }}"></div>
             <input type="submit" value="Submit" class="submit" />    
         </form>
         <a href="/project/login">Already have an account? Log in.</a>
