--- a/project/views/login.html
+++ b/project/views/login.html
@@ -26,7 +26,7 @@
             <input type="email" placeholder="Email" name="email" required />
             <input type="password" placeholder="Password" name="password" required />
             <br />
-            <div class="g-recaptcha" data-sitekey="6LcvrNYjAAAAAKqcfRLqVq1_Zkf-SVG9fSj7ji8g"></div>
+            <div class="g-recaptcha" data-sitekey="{{ siteKey }}"></div>
             <input type="submit" value="Login" class="submit" />    
         </form>
         <a href="/project/register">Don't have an account? Register.</a>
