--- a/project/views/contact.html
+++ b/project/views/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
+     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <title>Contact Us</title>
 </head>
 <body>
@@ -16,6 +17,7 @@
             <input type="subject" name="subject" placeholder="Subject" required />
             <textarea name="message" placeholder=" Message"></textarea>
             <input type='hidden' name='csrf_token' value='{{ csrf_token }}' />
+            <div class="g-recaptcha" data-sitekey="{{ siteKey }}"></div>
             <input type="submit" value="Submit" />
         </form>
     </main>
